# PlumberApp

./: README.md  requirements_post_install.txt
end_to_end/TPU/flax_examples/wmt/: train.py  (+8 more)
microbenchmarks/: plot_stats.py  run_all.sh  run_all_PDL.sh
microbenchmarks/simple_gnmt/: .gitignore  benchmark_mlperf.py  dataset_flags.py  estimator.py  gen_util.py  graph_rewrites.py  graph_rewrites_patch.py  low_level_runner.py  pipeline_optimizer.py  train_sweep.sh  train_sweep_PDL.sh
microbenchmarks/simple_rcnn/: .gitignore  anchors.py  benchmark_mlperf.py  dataloader.py  dataloader_basic.py  graph_rewrites.py  graph_rewrites_LP.py  kill_benchmarks.sh  mask_rcnn_params.py  pipeline_optimizer.py  train_sweep.sh  train_sweep_PDL.sh
microbenchmarks/simple_ssd/: benchmark_mlperf.py  dataloader.py  dataset_flags.py  input_pipeline.py  pipeline_optimizer.py  requirements.txt  ssd_train.py  train_sweep.sh  train_sweep_PDL.sh
notebook/: Example.ipynb
plumber_analysis/: .gitignore  README.md  install.sh  setup.cfg
plumber_analysis/src/plumber_analysis/: annotations.py  bandwidth_utilities.py  benchmark_util.py  config.py  convex_solver.py  dataset_echoing.py  extensions.py  gen_util.py  graph_rewrites.py  graphdef_util.py  high_level_analysis.py  machine_info.py  memory_management.py  pipeline_optimizer.py  pipeline_optimizer_wrapper.py  plotting_util.py  resource_measurements.py  simulation.py  statistics_collection.py  tfdata_service.py  util.py
plumber_analysis/tests/: test_gen_util.py  test_machine_info.py  test_resource_measurements.py  test_statistics_collection.py
(+129 files in other folders)
