[metadata]
name = plumber_analysis-mkuchnik
version = 0.0.1
author = Michael Kuchnik
author_email = michaelkuchnik@gmail.com
description = Utilities for analyzing tf.data pipelines
long_description = file: README.md
long_description_content_type = text/markdown
# TODO(mkuchnik): Fill out and add license
url = https://github.com/mkuchnik
project_urls =
    Bug Tracker = https://github.com/mkuchnik
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    graphsurgeon
    networkx
    cvxpy
    matplotlib
    numpy
    pandas
    psutil
    pydot
    pyyaml
    tensorflow >= 2.4

[options.packages.find]
where = src
